# zissou

./: .gitignore  70-zissou.rules  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  dev-requirements.txt  flash.gdb  memory.x  openocd.cfg  openocd.gdb  pytest.ini  requirements.txt  rustfmt.toml
.cargo/: config
.circleci/: config.yml
hil-tests/: README.md  test_ccid.py  test_serial.py
rust-littlefs/: .gitrepo
rust-littlefs/littlefs/: Cargo.toml
rust-littlefs/littlefs-sys/: Cargo.toml  build.rs
rust-littlefs/littlefs-sys/littlefs/: .gitrepo  string.c
rust-littlefs/littlefs/src/: lib.rs
scripts/: tail-zissoulogs  tail-zissouserial
src/: gordon.rs  main-interrupts.rs  main-no-interrupts.rs  main.rs
src/usb/: mod.rs
src/usb/ccid/: mod.rs
src/usb/cdc_acm/: mod.rs
stm32-rs/stm32l4/: .gitrepo
stm32-rs/stm32l4/src/stm32l4x1/: device.x  exti.rs  gpioc.rs  lcd.rs  lpuart1.rs  rcc.rs  stk.rs
stm32-rs/stm32l4/src/stm32l4x1/aes/: dinr.rs  doutr.rs  ivr2.rs  sr.rs
stm32-rs/stm32l4/src/stm32l4x1/comp/: comp2_csr.rs
stm32-rs/stm32l4/src/stm32l4x1/crc/: pol.rs
stm32-rs/stm32l4/src/stm32l4x1/dac1/: shsr2.rs
stm32-rs/stm32l4/src/stm32l4x1/dbgmcu/: idcode.rs
stm32-rs/stm32l4/src/stm32l4x1/dfsdm/: flt.rs
stm32-rs/stm32l4/src/stm32l4x1/dma1/: ccr5.rs  cselr.rs
stm32-rs/stm32l4/src/stm32l4x1/exti/: ftsr2.rs  imr2.rs
stm32-rs/stm32l4/src/stm32l4x1/firewall/: cr.rs  cssa.rs  nvdsl.rs
stm32-rs/stm32l4/src/stm32l4x1/flash/: cr.rs  optr.rs  pcrop1sr.rs  pdkeyr.rs  sr.rs  wrp1ar.rs  wrp2br.rs
stm32-rs/stm32l4/src/stm32l4x1/fpu_cpacr/: cpacr.rs
stm32-rs/stm32l4/src/stm32l4x1/gpioa/: pupdr.rs
stm32-rs/stm32l4/src/stm32l4x1/gpiob/: ospeedr.rs
stm32-rs/stm32l4/src/stm32l4x1/i2c1/: cr1.rs  icr.rs  timeoutr.rs
stm32-rs/stm32l4/src/stm32l4x1/lcd/: ram_com1.rs  ram_com3.rs  ram_com4.rs
stm32-rs/stm32l4/src/stm32l4x1/lptim1/: arr.rs  cmp.rs  icr.rs
stm32-rs/stm32l4/src/stm32l4x1/lpuart1/: cr2.rs  isr.rs
stm32-rs/stm32l4/src/stm32l4x1/opamp/: opamp1_otr.rs  opamp2_otr.rs
stm32-rs/stm32l4/src/stm32l4x1/pwr/: pdcrc.rs  pdcrd.rs  pucrc.rs  pucre.rs  pucrg.rs  sr1.rs
stm32-rs/stm32l4/src/stm32l4x1/quadspi/: ccr.rs  dcr.rs  dlr.rs  psmkr.rs
stm32-rs/stm32l4/src/stm32l4x1/rcc/: ahb3smenr.rs  apb1enr1.rs  apb1enr2.rs  apb1rstr2.rs  apb1smenr2.rs  apb2enr.rs  bdcr.rs  ccipr.rs  cfgr.rs  cr.rs  icscr.rs
stm32-rs/stm32l4/src/stm32l4x1/rtc/: bkpr.rs
stm32-rs/stm32l4/src/stm32l4x1/sdmmc/: resp4.rs
stm32-rs/stm32l4/src/stm32l4x1/swpmi1/: ier.rs  isr.rs  rdr.rs
stm32-rs/stm32l4/src/stm32l4x1/syscfg/: cfgr1.rs  cfgr2.rs  exticr1.rs  exticr4.rs
stm32-rs/stm32l4/src/stm32l4x1/tim1/: egr.rs  or2.rs
stm32-rs/stm32l4/src/stm32l4x1/tim15/: dier.rs
stm32-rs/stm32l4/src/stm32l4x1/tim16/: cr1.rs  dier.rs  or1.rs  sr.rs
stm32-rs/stm32l4/src/stm32l4x1/tim6/: cr2.rs  egr.rs
stm32-rs/stm32l4/src/stm32l4x1/tsc/: iogcr.rs  iogcsr.rs
stm32-rs/stm32l4/src/stm32l4x1/usart1/: cr1.rs
stm32-rs/stm32l4/src/stm32l4x1/usart3/: brr.rs  cr3.rs  isr.rs
stm32-rs/stm32l4/src/stm32l4x1/usb_sram/: bcdr.rs
stm32-rs/stm32l4/src/stm32l4x2/: crc.rs  dac1.rs  dbgmcu.rs  device.x  dma1.rs  firewall.rs  flash.rs  fpu.rs  sdmmc.rs  tsc.rs
stm32-rs/stm32l4/src/stm32l4x2/aes/: ivr0.rs
stm32-rs/stm32l4/src/stm32l4x2/can1/: fb.rs  fmr.rs  rx.rs
stm32-rs/stm32l4/src/stm32l4x2/comp/: comp1_csr.rs
stm32-rs/stm32l4/src/stm32l4x2/crc/: cr.rs
stm32-rs/stm32l4/src/stm32l4x2/dac1/: shrr.rs
stm32-rs/stm32l4/src/stm32l4x2/dfsdm/: ch.rs  dfsdm0_cr2.rs  dfsdm3_cr2.rs
stm32-rs/stm32l4/src/stm32l4x2/dma1/: ccr4.rs  ccr6.rs
stm32-rs/stm32l4/src/stm32l4x2/exti/: ftsr1.rs  rtsr2.rs  swier1.rs  swier2.rs
stm32-rs/stm32l4/src/stm32l4x2/firewall/: csl.rs  vdsl.rs
stm32-rs/stm32l4/src/stm32l4x2/flash/: wrp1br.rs
stm32-rs/stm32l4/src/stm32l4x2/gpioa/: odr.rs
stm32-rs/stm32l4/src/stm32l4x2/gpioc/: ospeedr.rs  pupdr.rs
stm32-rs/stm32l4/src/stm32l4x2/i2c1/: isr.rs
stm32-rs/stm32l4/src/stm32l4x2/iwdg/: rlr.rs  sr.rs
stm32-rs/stm32l4/src/stm32l4x2/lcd/: clr.rs  ram_com2.rs  ram_com5.rs  ram_com6.rs  sr.rs
stm32-rs/stm32l4/src/stm32l4x2/lptim1/: cr.rs
stm32-rs/stm32l4/src/stm32l4x2/lpuart1/: cr1.rs  rqr.rs
stm32-rs/stm32l4/src/stm32l4x2/opamp/: opamp1_lpotr.rs
stm32-rs/stm32l4/src/stm32l4x2/pwr/: pdcrf.rs  sr2.rs
stm32-rs/stm32l4/src/stm32l4x2/quadspi/: cr.rs  dr.rs  pir.rs  sr.rs
stm32-rs/stm32l4/src/stm32l4x2/rcc/: ahb1enr.rs  ahb1smenr.rs  ahb2enr.rs  ahb3enr.rs  apb1enr1.rs  apb1rstr1.rs  apb1smenr1.rs  apb2rstr.rs  cifr.rs  crrcr.rs  csr.rs  pllsai1cfgr.rs
stm32-rs/stm32l4/src/stm32l4x2/sai1/: ch.rs
stm32-rs/stm32l4/src/stm32l4x2/sdmmc/: dctrl.rs
stm32-rs/stm32l4/src/stm32l4x2/stk/: load.rs
stm32-rs/stm32l4/src/stm32l4x2/swpmi1/: tdr.rs
stm32-rs/stm32l4/src/stm32l4x2/syscfg/: exticr2.rs  swpr.rs
stm32-rs/stm32l4/src/stm32l4x2/tim1/: ccr.rs  (+3 more)
stm32-rs/stm32l4/src/stm32l4x3/: device.x  nvic_stir.rs  opamp.rs  rcc.rs  rng.rs  sai1.rs  swpmi1.rs  syscfg.rs  tim16.rs
stm32-rs/stm32l4/src/stm32l4x5/: adc1.rs  can1.rs  dbgmcu.rs  device.x  dfsdm.rs  fmc.rs  pwr.rs  quadspi.rs  rcc.rs  vrefbuf.rs
stm32-rs/stm32l4/src/stm32l4x6/: aes.rs  can1.rs  comp.rs  dcmi.rs  dfsdm1.rs  dma2d.rs  fpu_cpacr.rs  gpioa.rs  gpioi.rs  hash.rs  lptim1.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  rtc.rs  scb_actrl.rs  spi1.rs  swpmi1.rs  tim1.rs  tim2.rs
stm32l43x-usbd/: .gitrepo  Cargo.toml  README.md  openocd.cfg
stm32l43x-usbd/examples/: serial.rs  serial_interrupt.rs  smartcard.rs
stm32l43x-usbd/examples/ccid/: mod.rs
stm32l43x-usbd/examples/cdc_acm/: mod.rs
stm32l43x-usbd/src/: bus.rs  endpoint.rs  lib.rs
stm32l4xx-hal/: .gitrepo  Cargo.toml
stm32l4xx-hal/examples/: flash.rs  rng.rs
stm32l4xx-hal/src/: flash.rs  hal.rs  lib.rs  prelude.rs  pwm.rs  pwr.rs  rcc.rs  rng.rs
stm32l4xx-hal/src/extra_traits/: flash.rs
usb-device/: .gitrepo  Cargo.toml
usb-device/src/: control_pipe.rs  lib.rs
zissou-python/: .gitignore  pyproject.toml
zissou-python/zissou/: __init__.py
zissou-python/zissou/cli/: __init__.py
(+573 files in other folders)
