[package]
name = "zissou"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Protecting you from jaguar sharks since 2019"
repository = "https://github.com/nickray/zissou"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["no-std", "embedded", "stm32l4"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-halt = "0.2.0"


[[bin]]
name = "zissou"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
