[package]
name = "zissou"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Protecting you from jaguar sharks since 2019"
repository = "https://github.com/nickray/zissou"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["no-std", "embedded", "stm32l4"]

[[bin]]
name = "zissou"
test = false
bench = false

[workspace]
members = [
  "stm32l4xx-hal",
  "usb-device",
  "stm32-rs/stm32l4",
  "stm32l43x-usbd",
]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.1.0-beta.4"
ufmt-write = "0.1.0-beta.1"
usbd-serial = { git = "https://github.com/nickray/usbd-serial" }

[dependencies.stm32l4xx-hal]
path = "./stm32l4xx-hal"
default-features = false
features = ["rt", "stm32l4x2"]

[dependencies.usb-device]
path = "./usb-device"
features = ["bigger-control-buffer"]

[dependencies.stm32l43x-usbd]
path = "./stm32l43x-usbd"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
