[package]
name = "zissou"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Protecting you from jaguar sharks since 2019"
repository = "https://github.com/nickray/zissou"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["no-std", "embedded", "stm32l4"]

[[bin]]
name = "zissou"
test = false
bench = false

[workspace]
members = [
  "stm32l4xx-hal",
  "stm32-rs/stm32l4",
  "rust-littlefs/littlefs",
  "rust-littlefs/littlefs-sys",
]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.2"
panic-halt = "0.2.0"
ufmt = "0.1.0-beta.4"
ufmt-write = "0.1.0-beta.1"
stm32-usbd = { version = "0.3.0", features = ["stm32l4x2xx"] }
usb-device = { version = "0.2.2", features = ["control-buffer-256"] }
usbd-serial = "0.1.0"
cortex-m-rtfm = { version = "0.4.0", features = ["timer-queue"] }
cortex-m-semihosting = "0.3.3"
byteorder = { version = "1.3.1", default-features = false }
panic-semihosting = "0.5.2"
# libc = { version = "0.2.58", default-features = false }

[dependencies.stm32l4xx-hal]
path = "./stm32l4xx-hal"
default-features = false
features = ["rt", "stm32l4x2", "extra-traits"]

[dependencies.littlefs]
path = "./rust-littlefs/littlefs"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
stm32l4xx-hal = { path = "./stm32l4xx-hal" }
