[package]
name = "stm32l43x-usbd"
version = "0.1.0"
edition = "2018"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.0"
cortex-m = "0.5.8"
cortex-m-semihosting = "0.3.3"

[dependencies.stm32l4xx-hal]
path = "../stm32l4xx-hal"
# git = "https://github.com/nickray/stm32l4xx-hal"
default-features = false
features = ["rt", "stm32l4x2", "extra-traits"]

[dependencies.usb-device]
# git = "https://github.com/mvirkkunen/usb-device"
# rev = "e58e30f3b9c9bf4aab00ea039d129b964a3fd2d3"
path = "../usb-device"
features = ["bigger-control-buffer"]

[dev-dependencies]
cortex-m-rt = "0.6.7"
cortex-m-rtfm = "0.4.0"
panic-semihosting = "0.5.1"
# panic-halt = "0.2.0"

[profile.dev]
debug = true

[profile.release]
debug = true
# lto = true
opt-level = "s"

# [features]
# ccid_interrupt_ep = []
