[package]
name = "stm32l4xx-hal"
version = "0.4.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
description = "Hardware abstraction layer for the stm32l4xx chips"
keywords = ["no-std", "stm32l4xx", "stm32l4", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/MabezDev/stm32l4xx-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
nb = "0.1.1"
# stm32l4 = { git = "https://github.com/nickray/stm32l4" }
stm32l4 = { path = "../stm32-rs/stm32l4" }
as-slice = "0.1"
byteorder = { version = "1.3.1", default-features = false }
generic-array = "0.13.0"
itertools = { version = "0.8.0", default-features = false }
# cortex-m-semihosting = "0.3.3"

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[package.metadata.docs.rs]
features = ["rt", "stm32l4x2"]

[features]
rt = ["stm32l4/rt"]
stm32l4x1 = ["stm32l4/stm32l4x1", "device-selected"]
stm32l4x2 = ["stm32l4/stm32l4x2", "device-selected"]
stm32l4x3 = ["stm32l4/stm32l4x3", "device-selected"]
stm32l4x5 = ["stm32l4/stm32l4x5", "device-selected"]
stm32l4x6 = ["stm32l4/stm32l4x6", "device-selected"]
device-selected = []
unproven = ["embedded-hal/unproven"]
extra-traits = []
# default = ["stm32l4x2"]

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.1"
cortex-m-rt = "0.6.6"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
